tests/snippets/errors/input_redecl_2.rs
fn main(a: u8) {
    let a = 1u8;
}